--- a/week6/Lab/week6-workshop/package.json
+++ b/week6/Lab/week6-workshop/package.json
@@ -1,13 +1,20 @@
 {
   "name": "week6-workshop",
   "version": "1.0.0",
+  "description": "Express API Workshop",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "description": ""
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.22.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
